--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
 
   <body>
     <img src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
-    <h2>E-mail us - support@spring.com</h2>
+    <h2>E-mail us - support@spring.ie</h2>
     <p th:text="${message}">Exception message</p>
   </body>
 
